# distributed-llm-guide

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Makefile  README.md  pyproject.toml  requirements.txt
azure/: azure_ml_config.py
azure/compute_configs/: gpu_cluster.yaml
azure/deployment_configs/: endpoint_config.yaml
azure/environments/: serving_env.yaml  training_env.yaml
benchmarks/: performance_benchmark.py
deployment/: score.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: ARCHITECTURE.md  index.html
docs/quiz/: index.html  quiz-app.js  quiz-data.js  styles.css
docs/tutorials/: 01_distributed_training.md  02_peft_techniques.md  03_model_optimization.md  README.md
examples/: train_code_model.py
quiz/: quiz-data.js
scripts/: setup.py
src/data/: __init__.py  data_pipeline.py
src/models/: code_model_trainer.py  multimodal_model.py
src/monitoring/: __init__.py  metrics_tracker.py  model_monitor.py
src/optimization/: __init__.py  model_optimizer.py
src/serving/: model_server.py
src/training/: distributed_trainer.py  peft_trainer.py
tests/: __init__.py  test_distributed_training.py
