[tool.poetry]
name = "distributed-llm-guide"
version = "0.1.0"
description = "Production Distributed LLM Engineering Guide - demonstrating large-scale model deployment"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
transformers = "^4.36.0"
datasets = "^2.14.0"
accelerate = "^0.25.0"
deepspeed = "^0.12.0"
peft = "^0.7.0"
bitsandbytes = "^0.41.0"
azure-ai-ml = "^1.12.0"
azure-storage-blob = "^12.19.0"
azureml-core = "^1.54.0"
mlflow = "^2.9.0"
wandb = "^0.16.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
prometheus-client = "^0.19.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
tensorrt = {version = "*", markers = "platform_system == 'Linux'"}
onnx = "^1.15.0"
onnxruntime-gpu = "^1.16.0"
ray = {extras = ["default", "serve"], version = "^2.8.0"}
triton = "^2.1.0"
pydantic = "^2.5.0"
redis = "^5.0.0"
kubernetes = "^28.1.0"
pytest = "^7.4.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
einops = "^0.7.0"
safetensors = "^0.4.0"
tokenizers = "^0.15.0"
sentencepiece = "^0.1.99"
pillow = "^10.0.0"
torchvision = "^0.15.0"
timm = "^0.9.0"
opencv-python = "^4.8.0"
tqdm = "^4.66.0"
rich = "^13.7.0"
typer = "^0.9.0"
loguru = "^0.7.0"
httpx = "^0.25.0"
aiofiles = "^23.2.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"